changes in notebooks

--- a/notebook/data_exploration.ipynb
+++ b/notebook/data_exploration.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline"
@@ -14,9 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -28,9 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "BATH_SIZE = 100\n",
@@ -52,9 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
@@ -65,9 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_set = H5PYDataset(DATA_TEMPLATE % (IMG_SIZE, IMG_SIZE), which_sets=('all',))"
@@ -76,9 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -95,9 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import string\n",
@@ -126,9 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -148,9 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def dump_to_fastext_corpora(data_set, output, id2category,\n",
@@ -187,9 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -224,9 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -298,9 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -329,9 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -421,9 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open(LANGUAGE_MODEL_VOCABULARY, 'rt') as f:\n",
@@ -433,9 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -488,9 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "text, img, metadata  = data_set.get_data(handle, slice(i, (i+1)))\n",
@@ -516,9 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -590,9 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "img_304 = scipy.misc.imresize(img, [BIG_SIZE, BIG_SIZE], 'bicubic')\n",
@@ -602,9 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -635,15 +597,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Text preprocessing for fastTe"
+    "# Text preprocessing for fastText"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 237,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from random import sample\n",
@@ -668,6 +628,54 @@
     "    \n",
     "with open(FASTTEXT_DATA_CLEAN, 'wt') as f:\n",
     "    f.writelines([strip(line) for line in all_lines])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.python.client import device_lib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[name: \"/cpu:0\"\n",
+      "device_type: \"CPU\"\n",
+      "memory_limit: 268435456\n",
+      "locality {\n",
+      "}\n",
+      "incarnation: 15711378243169105013\n",
+      ", name: \"/gpu:0\"\n",
+      "device_type: \"GPU\"\n",
+      "memory_limit: 11982592410\n",
+      "locality {\n",
+      "  bus_id: 1\n",
+      "}\n",
+      "incarnation: 12150502580530950777\n",
+      "physical_device_desc: \"device: 0, name: TITAN Xp, pci bus id: 0000:0c:00.0\"\n",
+      ", name: \"/gpu:1\"\n",
+      "device_type: \"GPU\"\n",
+      "memory_limit: 11982592410\n",
+      "locality {\n",
+      "  bus_id: 1\n",
+      "}\n",
+      "incarnation: 8819015065664435581\n",
+      "physical_device_desc: \"device: 1, name: TITAN Xp, pci bus id: 0000:0d:00.0\"\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(device_lib.list_local_devices())"
    ]
   }
  ],
