--- a/notebook/text_encoder.ipynb
+++ b/notebook/text_encoder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,17 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import keras\n",
     "import tensorflow as tf"
@@ -36,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,19 +228,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No handlers could be found for logger \"root\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data, labels, word_index = load_and_process(DATA_PATH, MAX_SENT_LENGTH, MAX_SENT_LENGTH)"
+    "data, labels, word_index = load_and_process(DATA_PATH, MAX_WORDS, MAX_SENT_LENGTH)"
    ]
   },
   {
@@ -263,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,20 +256,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "dropout_rate = 0.2\n",
     "nb_classes = labels.shape[1]\n",
     "weight_decay = 0.01\n",
-    "nb_filter = 128\n",
+    "weight_decay = 128\n",
     "filter_length = 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,9 +301,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding_1 (Embedding)      (None, 400, 300)          2142000   \n",
+      "_________________________________________________________________\n",
+      "conv1d_7 (Conv1D)            (None, 398, 128)          115328    \n",
+      "_________________________________________________________________\n",
+      "max_pooling1d_7 (MaxPooling1 (None, 79, 128)           0         \n",
+      "_________________________________________________________________\n",
+      "conv1d_8 (Conv1D)            (None, 77, 128)           49280     \n",
+      "_________________________________________________________________\n",
+      "max_pooling1d_8 (MaxPooling1 (None, 25, 128)           0         \n",
+      "_________________________________________________________________\n",
+      "flatten_3 (Flatten)          (None, 3200)              0         \n",
+      "_________________________________________________________________\n",
+      "dropout_4 (Dropout)          (None, 3200)              0         \n",
+      "_________________________________________________________________\n",
+      "embedding (Dense)            (None, 1024)              3277824   \n",
+      "_________________________________________________________________\n",
+      "dense_4 (Dense)              (None, 116)               118900    \n",
+      "=================================================================\n",
+      "Total params: 5,703,332\n",
+      "Trainable params: 5,703,332\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ]
@@ -333,7 +349,7 @@
     "model.fit(\n",
     "    x_train, y_train,\n",
     "    validation_data=(x_val, y_val),\n",
-    "    epochs=2,\n",
+    "    epochs=10,\n",
     "    batch_size=128,\n",
     "    verbose=1)"
    ]
@@ -361,6 +377,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.predict(x_train[0].reshape(1, -1))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -373,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_path = '/data/models/ccn-fashion-txt/' # where to save the exported graph"
+    "export_path = '/data/models/cnn-fashion-txt/' # where to save the exported graph"
    ]
   },
   {
@@ -416,6 +441,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "from tensorflow.python.saved_model.builder import SavedModelBuilder\n",
     "from tensorflow.python.saved_model import utils\n",
     "from tensorflow.python.saved_model import tag_constants, signature_constants\n",
@@ -429,35 +456,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "saver = tf.train.Saver() \n",
     "builder = SavedModelBuilder(export_dir=export_path)\n",
     "\n",
     "signature = predict_signature_def(\n",
     "    inputs={'images': production_model.input},\n",
     "    outputs={'scores': production_model.output})\n",
     "\n",
-    "with K.get_session() as sess:\n",
-    "    builder.add_meta_graph_and_variables(\n",
-    "        sess=sess,\n",
-    "        tags=[tag_constants.SERVING],\n",
-    "        signature_def_map={'predict': signature})\n",
-    "    \n",
-    "    builder.save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### restore the model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "K.get_session().graph"
+    "sess = K.get_session()\n",
+    "builder.add_meta_graph_and_variables(\n",
+    "    sess=sess,\n",
+    "    tags=[tag_constants.SERVING],\n",
+    "    signature_def_map={'predict': signature})\n",
+    "\n",
+    "builder.save()\n",
+    "saver.save(sess, os.path.join(export_path, 'model.ckpt'))"
    ]
   },
   {
