added class for embedding

--- a/notebook/text_encoder.ipynb
+++ b/notebook/text_encoder.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
     "    logger.debug('Shape of data tensor: %s', data.shape)\n",
     "    logger.debug('Shape of label tensor: %s', ids.shape)\n",
     "\n",
-    "    return data, ids, word_index\n",
+    "    return data, ids, tokenizer\n",
     "\n",
     "\n",
     "def load_glove_embeddings(embedding_path, word_index, max_sequence, trainable=True):\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,11 +229,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data, labels, word_index = load_and_process(DATA_PATH, MAX_WORDS, MAX_SENT_LENGTH)"
+    "data, labels, tokenizer = load_and_process(DATA_PATH, MAX_WORDS, MAX_SENT_LENGTH)"
    ]
   },
   {
@@ -252,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding_layer = load_glove_embeddings(GLOVE_6B_PATH, word_index, MAX_SENT_LENGTH)"
+    "embedding_layer = load_glove_embeddings(GLOVE_6B_PATH, tokenizer.word_index, MAX_SENT_LENGTH)"
    ]
   },
   {
@@ -378,12 +378,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inspect model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sess = K.get_session()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.predict(x_train[0].reshape(1, -1))"
+    "# This is the exported input tensor (placeholder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_ = sess.graph.get_tensor_by_name('embedding_1_input:0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is the "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = sess.graph.get_tensor_by_name(\"embedding/Relu:0\")"
    ]
   },
   {
@@ -395,11 +438,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_path = '/data/models/cnn-fashion-txt/' # where to save the exported graph"
+    "export_path = '/data/models/cnn-word-fashion/' # where to save the exported graph"
    ]
   },
   {
@@ -430,9 +473,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### export tokenizer to ensure consistency between training and production\n",
+    "import pickle\n",
+    "\n",
+    "with open(os.path.join(export_path, 'tokenizer.pickle'), 'wb') as f_:\n",
+    "    pickle.dump(tokenizer, f_, protocol=2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "# Tensorflow part"
    ]
   },
