--- a/notebook/text_encoder-birds.ipynb
+++ b/notebook/text_encoder-birds.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,11 +69,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = '/data/fashion/txt/fashion.dedup.txt'\n",
+    "DATA_PATH = '/data/birds.'\n",
     "\n",
     "GLOVE_6B_VOCAB_PATH = '/data/models/glove.6B.vocab'\n",
     "GLOVE_6B_PATH = '/data/models/glove.6B.300d.txt'\n",
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
