--- a/notebook/data_exploration.ipynb
+++ b/notebook/data_exploration.ipynb
@@ -136,12 +136,7 @@
     "        text = ' '.join([word for word in text.split() if word in vocab])\n",
     "    if tokenize:\n",
     "        return text.split()\n",
-    "    return text\n",
-    "\n",
-    "def encode_fast_text(label, text):\n",
-    "    clean_label = label.lower().replace(\" \", \"-\")\n",
-    "    clean_text = ' '.join(text[0][0].split())\n",
-    "    return \"__label__%s %s\\n\" % (clean_label, clean_text)"
+    "    return text"
    ]
   },
   {
@@ -183,6 +178,13 @@
     "            \n",
     "            # track progress \n",
     "            processed += len(texts)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Some sanity checks"
    ]
   },
   {
@@ -508,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dump data for text embedding with CNNN"
+    "# Dump data for text embedding with CNN"
    ]
   },
   {
