--- a/notebook/data_preprocessing.ipynb
+++ b/notebook/data_preprocessing.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -14,7 +16,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Add project code\n",
@@ -25,8 +29,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import os \n",
     "import numpy as np\n",
@@ -41,25 +56,28 @@
     "BIG_SIZE = int(IMG_SIZE * 76 / 64)\n",
     "SMALL_SIZE = int(BIG_SIZE / LR_HR_RATIO)\n",
     "\n",
-    "DATA_PATH = '/data/fashion/'\n",
-    "DATA_TEMPLATE =  os.path.join(DATA_PATH, 'extract_sample_3_%i_%i.h5')"
+    "FASHION_PATH  = '/fashion/'\n",
+    "DATA_PATH     = '/data/'\n",
+    "DATA_TEMPLATE =  os.path.join(FASHION_PATH, 'ssense_%i_%i.h5')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "brands.json  categories.json  extract_sample_3_256_256.h5  text_c10  txt\r\n"
+      "ssense_128_128.h5  ssense_256_256.h5  ssense_512_512.h5  ssense_full_size.h5\r\n"
      ]
     }
    ],
    "source": [
-    "! ls { DATA_PATH }"
+    "! ls { FASHION_PATH }"
    ]
   },
   {
@@ -71,13 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import json\n",
-    "categories = json.load(open(os.path.join(DATA_PATH, 'categories.json'), 'rt'))\n",
-    "id2category = { v: str(k) for k, v in categories.iteritems() }"
+    "category2idx = json.load(open(os.path.join(DATA_PATH, 'categories.json'), 'rt'))"
    ]
   },
   {
@@ -89,33 +108,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "dataset = H5PYDataset(DATA_TEMPLATE % (IMG_SIZE, IMG_SIZE), which_sets=('all',))\n",
-    "handle = dataset.open()"
+    "dataset = H5PYDataset(DATA_TEMPLATE % (IMG_SIZE, IMG_SIZE), \n",
+    "                      sources = ['input_category', 'input_description', 'input_image'],\n",
+    "                      which_sets=('all',),  load_in_memory=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "texts, images, metadata = dataset.get_data(handle, slice(0, dataset.num_examples))"
+    "classes, texts, images = dataset.data_sources"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 186759 examples\n"
+      "There are 73761 examples\n"
      ]
     }
    ],
@@ -125,19 +151,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "((186759, 1, 1), (186759, 256, 256, 3), (186759, 4))\n"
+      "((73761, 1), (73761, 256, 256, 3), (73761, 1))\n"
      ]
     }
    ],
    "source": [
-    "print(texts.shape, images.shape, metadata.shape)"
+    "print(texts.shape, images.shape, classes.shape)"
    ]
   },
   {
@@ -149,8 +177,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import string\n",
@@ -158,7 +188,9 @@
     "\n",
     "BLACK_LIST = string.punctuation.replace('%', '') + '\\n'\n",
     "\n",
-    "def normalize(text_array, black_list = BLACK_LIST, vocab=None, lowercase =  True, tokenize = False):\n",
+    "def normalize(text_array, \n",
+    "    black_list = BLACK_LIST,\n",
+    "    vocab=None, lowercase =  True, tokenize = False):\n",
     "    text = text_array[0]\n",
     "    if black_list:\n",
     "        text = text.translate(string.maketrans(BLACK_LIST, ' '*len(BLACK_LIST)))\n",
@@ -182,28 +214,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class_info = [int(cls) for cls in metadata[:,0]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N. examples: 186759, fst: 1\n"
+      "N. examples: 73761, fst: ['TOPS']\n"
      ]
     }
    ],
    "source": [
-    "print(\"N. examples: %i, fst: %s\" %(len(class_info), class_info[0]))"
+    "print(\"N. examples: %i, fst: %s\" %(len(classes), classes[0]))"
    ]
   },
   {
@@ -215,23 +240,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def create_captions(\n",
-    "    class_info, texts, id2category, \n",
+    "    classes, texts, category2idx, \n",
     "    verbose = True, save=True):\n",
     "    '''\n",
     "    helper function to create text_c10 folder\n",
     "    '''\n",
-    "    id2count = {k: 1 for k in id2category}\n",
+    "    cls2count = {k.replace(\" \", \"_\"): 1 for k in category2idx}\n",
     "    filenames = []\n",
-    "    for index, (cls_id, text) in enumerate(zip(class_info, texts)):\n",
-    "        category = id2category[cls_id].replace(\" \", \"_\")\n",
-    "\n",
-    "        dirname  = \"%.3i.%s\" % (cls_id, category)\n",
-    "        filename = \"%s_%i.txt\" % (category, id2count[cls_id])\n",
+    "    for index, (cls, text) in enumerate(zip(classes, texts)):\n",
+    "        category = cls[0].replace(\" \", \"_\").replace(\"&\", 'AND')\n",
+    "        cls = cls[0].replace(\"&\", 'AND')\n",
+    "        \n",
+    "        dirname  = \"%.3i.%s\"   % (category2idx[cls], category)\n",
+    "        filename = \"%s_%i.txt\" % (category, cls2count[category])\n",
     "\n",
     "        directory = os.path.join(DATA_PATH, \"text_c10/%s\" % dirname)\n",
     "        if not os.path.exists(directory):\n",
@@ -245,31 +273,35 @@
     "                f.write(\"%s\\n\" % normalize(text))    \n",
     "\n",
     "        filenames.append(os.path.join(dirname, filename))\n",
-    "        id2count[cls_id] += 1       \n",
+    "        cls2count[category] += 1       \n",
     "        \n",
     "    return filenames"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# prepare filenames\n",
-    "filenames = create_captions(class_info, texts, id2category, False, False)"
+    "filenames = create_captions(classes, texts, category2idx, False, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N. files: 186759, fst: 001.Short_Dresses/Short_Dresses_1.txt\n"
+      "N. files: 73761, fst: 001.TOPS/TOPS_1.txt\n"
      ]
     }
    ],
@@ -287,7 +319,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -307,7 +341,7 @@
    "source": [
     "from embedding.model import Model\n",
     "\n",
-    "MODEL_PATH = '/data/models/cnn-word-fashion/'\n",
+    "MODEL_PATH = '/models/fashion/'\n",
     "\n",
     "model = Model(\n",
     "    os.path.join(MODEL_PATH, 'frozen_model.pb'),\n",
@@ -317,7 +351,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_batch(list_, batch_size):\n",
@@ -351,7 +387,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import StratifiedShuffleSplit"
@@ -360,7 +398,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.25, random_state=0)\n",
@@ -370,7 +410,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -397,7 +439,9 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -417,7 +461,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -438,7 +484,9 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from scipy.misc import imresize\n",
@@ -494,7 +542,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -521,7 +571,9 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -833,13 +885,7 @@
       "Processing batch number 294\n",
       "Processing batch number 295\n",
       "Processing batch number 296\n",
-      "Processing batch number 297\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing batch number 297\n",
       "Processing batch number 298\n",
       "Processing batch number 299\n",
       "Processing batch number 301\n",
@@ -1154,13 +1200,7 @@
       "Processing batch number 613\n",
       "Processing batch number 614\n",
       "Processing batch number 615\n",
-      "Processing batch number 616\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing batch number 616\n",
       "Processing batch number 617\n",
       "Processing batch number 618\n",
       "Processing batch number 619\n",
@@ -1466,13 +1506,7 @@
       "Processing batch number 922\n",
       "Processing batch number 923\n",
       "Processing batch number 924\n",
-      "Processing batch number 925\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing batch number 925\n",
       "Processing batch number 926\n",
       "Processing batch number 927\n",
       "Processing batch number 928\n",
@@ -1660,7 +1694,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1680,7 +1716,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_path = '/data/birds/test/'"
@@ -1689,7 +1727,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1707,7 +1747,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -1717,19 +1759,23 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "birds_class_info = pickle.load(open(os.path.join(data_path, 'class_info.pickle'), 'rb'))\n",
-    "birds_filenames = pickle.load(open(os.path.join(data_path, 'filenames.pickle'), 'rb'))\n",
-    "birds_images76 = pickle.load(open(os.path.join(data_path, '76images.pickle'), 'rb'))\n",
+    "birds_class_info        = pickle.load(open(os.path.join(data_path, 'class_info.pickle'), 'rb'))\n",
+    "birds_filenames         = pickle.load(open(os.path.join(data_path, 'filenames.pickle'), 'rb'))\n",
+    "birds_images76          = pickle.load(open(os.path.join(data_path, '76images.pickle'), 'rb'))\n",
     "birds_custom_embeddings = pickle.load(open(os.path.join(data_path, 'custom-embeddings.pickle'), 'rb'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1749,7 +1795,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1769,7 +1817,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1794,6 +1844,7 @@
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -1815,7 +1866,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1835,7 +1888,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1874,7 +1929,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "! ls /data/birds/text_c10/ | head "
@@ -1883,7 +1940,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "! ls /data/birds/text_c10/001.Black_footed_Albatross  | head"
@@ -1892,7 +1951,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "! cat /data/birds/text_c10/001.Black_footed_Albatross/Black_Footed_Albatross_0001_796111.txt"
@@ -1908,7 +1969,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "img_304 = scipy.misc.imresize(img, [BIG_SIZE, BIG_SIZE], 'bicubic')\n",
@@ -1918,7 +1981,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clean_plot_dpi(img_76, SMALL_SIZE) ; clean_plot_dpi(img_304, BIG_SIZE);"
@@ -1927,7 +1992,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from tensorflow.python.client import device_lib"
@@ -1936,7 +2003,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(device_lib.list_local_devices())"
