updated preprocessing code to take advantage of h5py

--- a/notebook/data_preprocessing.ipynb
+++ b/notebook/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from embedding.fashion.embed import create_captions, dump_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -45,10 +64,9 @@
     "from collections import Counter\n",
     "\n",
     "from embedding.model import Model\n",
-    "from embedding.utils import normalize\n",
+    "from embedding.preprocessing import normalize\n",
     "from embedding.utils import plot_splits\n",
-    "from embedding.preprocess_fashion import create_captions, dump_all\n",
-    "from embedding.train_embedding_model import get_split\n",
+    "from embedding.fashion.embed import create_captions, dump_all\n",
     "\n",
     "BATH_SIZE = 100\n",
     "IMG_SIZE = 256\n",
@@ -68,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -77,7 +95,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ssense_128_128.h5  ssense_256_256.h5  ssense_512_512.h5  ssense_full_size.h5\r\n"
+      "ssense_128_128_test.h5\r\n",
+      "ssense_128_128_test_indices.pickle\r\n",
+      "ssense_128_128_train.h5\r\n",
+      "ssense_128_128_train_indices.pickle\r\n",
+      "ssense_128_128_validation.h5\r\n",
+      "ssense_128_128_validation_indices.pickle\r\n",
+      "ssense_256_256_test.h5\r\n",
+      "ssense_256_256_test_indices.pickle\r\n",
+      "ssense_256_256_train.h5\r\n",
+      "ssense_256_256_train_indices.pickle\r\n",
+      "ssense_256_256_validation.h5\r\n",
+      "ssense_256_256_validation_indices.pickle\r\n",
+      "subset_optimised\r\n"
      ]
     }
    ],
